--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <main>
-
-        <div classe="passo" id="passo-0">
+        <div classe="passo ativo" id="passo-0">
             <p>Você é um detetive, e foi chamado para investigar um vilarejo atrás da floresta. Chegando no local, você vê uma mulher alta e palida lhe pedindo ajuda, ela estava muito ensaguentada.</p>
        <button class="btn-proximo" data-proximo="1">Você ajuda a mulher</button>
        <button class="btn-proximo" data-proximo="2">Você a ignora e corre</button>
@@ -23,8 +22,7 @@
        <button class="btn-proximo" data-proximo="4">Você decide voltar pra casa</button>
        </div>
     </main>
-
-
+    <script src="script.js"></script>
 
 </body>
 </html>
